[package]
authors = ["Daniel <codinaut@gmail.com>"]
description = "Test kit for logics with environment variable involvements"
edition = "2018"
homepage = "https://github.com/codinaut/envtestkit"
license = "MIT"
name = "envtestkit"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fake = "2.2.3"
serial_test = "0.4.0"
