[package]
authors = ["Daniel <codinaut@gmail.com>"]
description = "Test kit for logics with environment variable involvements"
edition = "2018"
homepage = "https://github.com/codinaut/envtestkit"
license = "MIT"
name = "envtestkit"
version = "1.0.0"

[features]
default = ["lock"]
lock = ["lazy_static", "parking_lot"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
parking_lot = { version = "0.11.0", optional = true }

[dev-dependencies]
fake = "2.2.3"
serial_test = "0.4.0"
